Fixed z-indexes

--- a/style/style.css
+++ b/style/style.css
@@ -61,7 +61,7 @@ margin-top:5px;
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 2000;
 }
 
 /* Links inside the navbar */
@@ -181,7 +181,7 @@ margin-top:5px;
 
 /*HACK padding-right to force wordwrap of links*/
 .sidebar{
-  z-index: 10;
+  z-index: 1900;
   height: 100%;
   width:300px;
   position: fixed;
